# py-svg-hush

./: CHANGELOG.md  Cargo.toml  README.md  py_svg_hush.pyi  pyproject.toml  readme.md
.github/workflows/: CI.yml
src/: lib.rs
tests/: test_filter_svg.py
